--- a/src/styles/blocks/_contact.scss
+++ b/src/styles/blocks/_contact.scss
@@ -36,6 +36,7 @@
 
   &__button {
     display: block;
+    position: absolute;
     border: 1px solid $colorGreen;
     border-radius: 50%;
 
@@ -48,8 +49,7 @@
     background-position: center;
 
     margin-top: 164px;
-    margin-left: 80px;
-
+    right: 20px;
     &:hover {
       @include transformElement;
     }
