--- a/src/styles/blocks/_nav.scss
+++ b/src/styles/blocks/_nav.scss
@@ -60,12 +60,16 @@
   &__list {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    width: 220px;
+    width: 100%;
     gap: 24px 20px;
 
     list-style: none;
     margin: 0;
     padding: 0;
+
+    @include onTablet {
+      width: 220px;
+    }
 
     @include onDesktop {
       gap: 32px 20px;
