--- a/src/styles/blocks/_schedule.scss
+++ b/src/styles/blocks/_schedule.scss
@@ -57,7 +57,7 @@
   font-size: 14px;
   font-weight: 400;
   line-height: 140%;
-  width: 130px;
+  min-width: 130px;
 
   @include onTablet {
     width: 220px;
