--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,9 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+@import "utils/vars";
+@import "utils/mixins";
+@import "utils/container";
+@import "../styles/block/header";
 
 body {
   background: $c-gray;
 }
+
