--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,14 @@
+$tablet-min-width: 768px;
+$desktop-min-width: 1280px;
 $c-gray: #eee;
+$c-base-logo: #0F0E08;
+$ff-ibm: IBM Plex Sans;
+$ff-m: Montserrat;
+$fw-300: 300;
+$fw-400: 400;
+$fw-500: 500;
+$fw-700: 700;
+$button-ticket-color: #1A5A4C;
+
+
+
