--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -1,17 +1,6 @@
 .header {
-  display: none;
+  display: block;
   &__logo {
-    margin: 0;
-
-    display: block;
-    color: #0f0e08;
-    text-align: center;
-    font-family: Montserrat;
-    font-size: 36px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 100%; /* 36px */
-
     @include onTablet {
       text-align: left;
       margin-left: 30px;
@@ -46,7 +35,7 @@
     }
 
     @include onDesktop {
-      height: 85vh;
+      height: 90vh;
     }
   }
 
@@ -67,7 +56,6 @@
   &__title {
     margin: 0;
     margin-block: 20px;
-    display: block;
     color: #000;
     text-align: center;
     font-family: Montserrat;
@@ -109,7 +97,7 @@
 
     margin-right: 50px;
 
-    color: $secondary-color;
+    color: $main-color;
     font-family: IBM Plex Sans;
     font-size: 16px;
     font-style: normal;
@@ -174,5 +162,41 @@
         display: block;
       }
     }
+  }
+
+  &__icon {
+    display: block;
+
+    top: 30px;
+    left: 30px;
+
+    @include onTablet {
+      display: none;
+    }
+
+    @include onDesktop {
+      display: none;
+    }
+
+
+  }
+}
+
+
+.header__icon--block {
+  display: none;
+
+  @include onTablet {
+    display: block;
+
+    position: relative;
+    top: -180px;
+  }
+
+  @include onDesktop {
+    display: block;
+
+    position: relative;
+    top: -100px;
   }
 }
