--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,8 +4,13 @@
 @import "page";
 @import "header";
 @import "actuell";
-@import "icons";
+@import "icon";
 @import "menu";
+@import "nav";
+@import "subscribe";
+@import "gallery";
+@import "footer";
+@import "all";
 
 body {
   background: $c-gray;
