--- a/src/styles/_actuell.scss
+++ b/src/styles/_actuell.scss
@@ -1,15 +1,33 @@
 .actuell {
   padding-top: 70px;
+  padding-bottom: 83px;
 
   @include onTablet {
     padding-top: 88px;
+    padding-bottom: 75px;
   }
 
   @include onDesktop {
     padding-top: 200px;
+    padding-bottom: 100px;
   }
 
-  &__title {
+  &__block {
+    @include onDesktop {
+      @include pageGrid;
+
+      margin-bottom: 104px;
+    }
+  }
+
+  &__content {
+    @include onDesktop {
+      grid-column: 9/12;
+      margin: auto 0;
+    }
+  }
+
+  &__title--main {
     color: #0f0e08;
     text-align: center;
     font-family: Montserrat;
@@ -18,9 +36,154 @@
     font-weight: 700;
     line-height: 100%; /* 36px */
 
+    margin: 0 auto;
+    margin-bottom: 40px;
+    width: min-content;
+
+    @include onTablet {
+      margin-bottom: 48px;
+
+      color: $main-color;
+      font-family: Montserrat;
+      font-size: 48px;
+      font-style: normal;
+      font-weight: 700;
+      line-height: 100%; /* 48px */
+    }
+
+    @include onDesktop {
+      margin-bottom: 56px;
+      width: 100%;
+
+      color: $main-color;
+      font-family: Montserrat;
+      font-size: 48px;
+      font-style: normal;
+      font-weight: 700;
+      line-height: 100%; /* 48px */
+    }
+  }
+
+  &__img {
+    display: block;
+    width: 100%;
+
+    grid-column: 1/7;
+  }
+
+  &__temp {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 16px;
+
+    @include onTablet {
+      justify-content: left;
+      align-items: center;
+      gap: 15px;
+    }
+
+    &--min {
+      @include onDesktop {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+      }
+    }
+  }
+
+  &__part {
     margin: 0;
 
-    width: min-content;
-    margin: 0 auto;
+    color: $green-color;
+    font-family: IBM Plex Sans;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 150%; /* 24px */
+  }
+
+  &__span {
+    color: #687480;
+    font-family: IBM Plex Sans;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 100%; /* 16px */
+  }
+
+  &__exgibition {
+    display: flex;
+    align-items: center;
+
+    gap: 15px;
+  }
+
+  &__title {
+    display: inline-block;
+    margin: 0;
+    color: $main-color;
+    font-family: Montserrat;
+    font-size: 28px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 100%; /* 28px */
+
+    margin-block: 10px;
+  }
+
+  &__text {
+    color: #4e4e4e;
+    font-family: IBM Plex Sans;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: 150%; /* 24px */
+
+    margin-bottom: 60px;
+  }
+
+  &__link {
+    display: block;
+    width: 10px;
+    height: 10px;
+    background-color: $color-red;
+
+    margin-top: 5px;
+  }
+
+  &__rama {
+    position: relative;
+  }
+
+  &__picture {
+    display: block;
+    width: 100%;
+  }
+
+  &__sky {
+    display: none;
+
+    width: 570px;
+
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    bottom: -101px;
+    left: 0;
+    right: 0;
+    text-align: center;
+    background-color: $white-color;
+
+    padding: 45px 100px 50px;
+
+    box-shadow: 0px 2px 0px 0px rgba(26, 90, 76, 0.25);
+
+    @include onTablet {
+      display: block;
+    }
+
+    @include onDesktop {
+      display: block;
+    }
   }
 }
