--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -32,10 +32,10 @@
 }
 
 .container {
-  @include ContentPaddingInline();
+  @include contentPaddingInline();
 }
 
-@mixin PageGrid {
+@mixin pageGrid {
   --columns: 2;
   display: grid;
   column-gap: 20px;
