--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -3,4 +3,6 @@ $c-gray: #eee;
 $tablet-min-width: 768px;
 $desktop-min-width: 1024px;
 $green-color: #1a5a4c;
-$secondary-color: #0f0e08;
+$main-color: #0f0e08;
+$white-color: #fff;
+$color-red: #f14a27;
