--- a/src/styles/_actuell.scss
+++ b/src/styles/_actuell.scss
@@ -86,7 +86,8 @@
       @include onDesktop {
         display: flex;
         align-items: center;
-        justify-content: space-between;
+        gap: 130px;
+        ;
       }
     }
   }
@@ -123,11 +124,11 @@
     margin: 0;
     color: $main-color;
     font-family: Montserrat;
-    font-size: 28px;
+    font-size: 36px;
     font-style: normal;
     font-weight: 400;
-    line-height: 100%; /* 28px */
-
+    line-height: 100%; /* 36px */
+text-align: left;
     margin-block: 10px;
   }
 
@@ -161,9 +162,9 @@
   }
 
   &__sky {
-    display: none;
+    display: block;
 
-    width: 570px;
+    width: 280px;
 
     position: absolute;
     margin-left: auto;
@@ -171,7 +172,6 @@
     bottom: -101px;
     left: 0;
     right: 0;
-    text-align: center;
     background-color: $white-color;
 
     padding: 45px 100px 50px;
@@ -179,6 +179,7 @@
     box-shadow: 0px 2px 0px 0px rgba(26, 90, 76, 0.25);
 
     @include onTablet {
+      width: 570px;
       display: block;
     }
 
