--- a/src/styles/_gallery.scss
+++ b/src/styles/_gallery.scss
@@ -1,5 +1,6 @@
 .gallery {
-  padding-block: 200px;
+  padding-top: 100px;
+  padding-bottom: 100px;
 
   &__title {
     color: #0f0e08;
@@ -16,8 +17,6 @@
     object-fit: cover;
   }
 
-  &__link {
-  }
 }
 
 .pictures {
