--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -1,5 +1,7 @@
 .header {
   display: block;
+  text-align: center;
+
   &__logo {
     @include onTablet {
       text-align: left;
@@ -166,37 +168,19 @@
 
   &__icon {
     display: block;
+    position: absolute;
 
-    top: 30px;
-    left: 30px;
+    top: 40px;
+    left: 56px;
 
     @include onTablet {
-      display: none;
     }
 
     @include onDesktop {
-      display: none;
+
     }
 
 
   }
 }
 
-
-.header__icon--block {
-  display: none;
-
-  @include onTablet {
-    display: block;
-
-    position: relative;
-    top: -180px;
-  }
-
-  @include onDesktop {
-    display: block;
-
-    position: relative;
-    top: -100px;
-  }
-}
