--- a/src/styles/_page.scss
+++ b/src/styles/_page.scss
@@ -10,6 +10,11 @@ ul {
   list-style: none;
 }
 
+img:hover {
+  scale: 1.05;
+  transition-duration: 400ms;
+}
+
 .page {
   scroll-behavior: smooth;
   font-family: "IBM Plex Sans", sans-serif;
