--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -11,6 +11,7 @@
   }
 
   &__grid {
+    position: relative;
     display: grid;
     grid-gap: 20px;
     grid-template-areas:
@@ -174,6 +175,8 @@
     }
   }
 
+
+
   &__line {
     margin: 0;
     background: rgba(26, 90, 76, 0.5);
@@ -181,7 +184,7 @@
     display: block;
     margin: 70px auto 40px auto;
 
-    width: 280px;
+    width: 100%;
     height: 1px;
 
     grid-area: line;
@@ -254,6 +257,24 @@
       width: max-content;
     }
   }
+
+  &__round {
+    display: block;
+    width: 50px;
+    height: 50px;
+position: absolute;
+right: -5px;
+bottom: 350px;
+border: 1px solid $green-color;
+border-radius: 50%;
+background-image: url(../images/icons/arrow-footer.svg);
+background-position: center;
+background-repeat: no-repeat;
+
+@include onTablet {
+  display: none;
+}
+  }
 }
 
 .adress {
@@ -293,4 +314,6 @@
     line-height: 150%; /* 21px */
     text-align: left;
   }
+
+
 }
