--- a/src/styles/_menu.scss
+++ b/src/styles/_menu.scss
@@ -1,4 +1,5 @@
 .menu {
+
   &__backdrop {
     position: fixed;
     width: 100%;
@@ -12,7 +13,7 @@
 
   &__content {
     padding-top: 40px;
-    padding-bottom: 27px;
+    padding-bottom: 40px;
 
     @include pageGrid;
 
@@ -38,6 +39,8 @@
 
   &__icon {
     display: block;
+    grid-column: 1/1;
+
   }
 
   &__nav {
@@ -46,11 +49,11 @@
     grid-column: 1/-1;
 
     @include onTablet {
-      grid-column: 1/3;
+      grid-column: 2/3;
     }
 
     @include onDesktop {
-      grid-column: 1/6;
+      grid-column: 2/5;
     }
   }
 
@@ -68,10 +71,12 @@
       width: 145px;
       transform: rotate(90deg);
       grid-column: 3/3;
+      margin:  auto 0;
     }
 
     @include onDesktop {
-      grid-column: 6/6;
+      grid-column: 5/6;
+      margin: auto 0;
     }
   }
 
