--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -175,8 +175,6 @@
     }
   }
 
-
-
   &__line {
     margin: 0;
     background: rgba(26, 90, 76, 0.5);
@@ -262,18 +260,18 @@
     display: block;
     width: 50px;
     height: 50px;
-position: absolute;
-right: -5px;
-bottom: 350px;
-border: 1px solid $green-color;
-border-radius: 50%;
-background-image: url(../images/icons/arrow-footer.svg);
-background-position: center;
-background-repeat: no-repeat;
+    position: absolute;
+    right: -5px;
+    bottom: 350px;
+    border: 1px solid $green-color;
+    border-radius: 50%;
+    background-image: url(../images/icons/arrow-footer.svg);
+    background-position: center;
+    background-repeat: no-repeat;
 
-@include onTablet {
-  display: none;
-}
+    @include onTablet {
+      display: none;
+    }
   }
 }
 
@@ -314,6 +312,18 @@ background-repeat: no-repeat;
     line-height: 150%; /* 21px */
     text-align: left;
   }
+}
 
-
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+  -webkit-text-fill-color: $main-color;
+  -webkit-box-shadow: 0 0 0px 1000px #fff inset;
+  transition: background-color 5000s ease-in-out 0s;
 }
