--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -136,7 +136,7 @@
     color: #687480;
     position: absolute;
     bottom: 93px;
-    left: 0;
+    left: 45px;
     font-family: IBM Plex Sans;
     font-size: 14px;
     font-style: normal;
@@ -177,10 +177,6 @@
     }
 
     @include onDesktop {
-
     }
-
-
   }
 }
-
