--- a/src/styles/_actuell.scss
+++ b/src/styles/_actuell.scss
@@ -81,15 +81,6 @@
       align-items: center;
       gap: 15px;
     }
-
-    &--min {
-      @include onDesktop {
-        display: flex;
-        align-items: center;
-        gap: 130px;
-        ;
-      }
-    }
   }
 
   &__part {
@@ -123,13 +114,33 @@
     display: inline-block;
     margin: 0;
     color: $main-color;
+
+    text-align: center;
     font-family: Montserrat;
-    font-size: 36px;
+    font-size: 28px;
     font-style: normal;
     font-weight: 400;
-    line-height: 100%; /* 36px */
-text-align: left;
-    margin-block: 10px;
+    line-height: 100%; /* 28px */
+
+    @include onTablet {
+      color: #0f0e08;
+      font-family: Montserrat;
+      font-size: 36px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 100%; /* 36px */
+      text-align: left;
+    }
+
+    @include onDesktop {
+      font-family: Montserrat;
+      font-size: 36px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 100%; /* 36px */
+      text-align: left;
+      margin-block: 10px;
+    }
   }
 
   &__text {
@@ -159,6 +170,10 @@ text-align: left;
   &__picture {
     display: block;
     width: 100%;
+
+    &:hover {
+      scale: none;
+    }
   }
 
   &__sky {
@@ -174,17 +189,38 @@ text-align: left;
     right: 0;
     background-color: $white-color;
 
-    padding: 45px 100px 50px;
+    padding-block: 20px;
 
     box-shadow: 0px 2px 0px 0px rgba(26, 90, 76, 0.25);
 
     @include onTablet {
-      width: 570px;
+      padding: 45px 55px 40px;
       display: block;
+      width: 570px;
     }
 
     @include onDesktop {
       display: block;
+    }
+
+    &--part {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      margin-bottom: 15px;
+      padding-inline: 10px;
+
+      @include onTablet {
+        align-items: center;
+        justify-content: left;
+        gap: 140px;
+      }
+
+      @include onDesktop {
+        display: flex;
+        align-items: center;
+        gap: 130px;
+      }
     }
   }
 }
