--- a/src/styles/_gallery.scss
+++ b/src/styles/_gallery.scss
@@ -16,7 +16,6 @@
     height: 100%;
     object-fit: cover;
   }
-
 }
 
 .pictures {
@@ -25,19 +24,67 @@
 
   &__item--small {
     grid-column: 1/4;
+
+    @include onTablet {
+      display: block;
+    }
+
+    @include onDesktop {
+      display: block;
+    }
   }
 
   &__item--big {
+    display: none;
     grid-column: 5/12;
+
+    @include onTablet {
+      display: none;
+    }
+
+    @include onDesktop {
+      display: block;
+    }
   }
 
   &__item--left {
+    display: none;
     grid-column: 1/8;
+
+    @include onTablet {
+      display: none;
+    }
+
+    @include onDesktop {
+      display: block;
+    }
   }
 
   &__item--right {
+    display: none;
     grid-column: 9/12;
+
+    @include onTablet {
+      display: none;
+    }
+
+    @include onDesktop {
+      display: block;
+    }
   }
+  &__item--small--gus {
+    display: none;
+    grid-column: 5/8;
+
+    @include onTablet {
+      display: block;
+    }
+
+    @include onDesktop {
+      display: none;
+    }
+  }
+
   &__img {
     display: block;
     width: 100%;
