--- a/src/styles/_gallery.scss
+++ b/src/styles/_gallery.scss
@@ -2,6 +2,14 @@
   padding-top: 100px;
   padding-bottom: 100px;
 
+  @include onTablet {
+    padding-bottom: 133px;
+  }
+
+  @include onDesktop {
+    padding-bottom: 200px;
+  }
+
   &__title {
     color: #0f0e08;
     font-family: Montserrat;
@@ -9,12 +17,6 @@
     font-style: normal;
     font-weight: 700;
     line-height: 100%; /* 48px */
-  }
-
-  &__picture {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
   }
 }
 
@@ -88,6 +90,8 @@
   &__img {
     display: block;
     width: 100%;
+    height: 100%;
+    object-fit: cover;
   }
 }
 
