--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -28,7 +28,7 @@
     background-size: cover;
     background-position: center;
     width: 100%;
-    height: 50vh;
+    height: 60vh;
 
     padding-top: 8px;
 
@@ -171,12 +171,11 @@
     position: absolute;
 
     top: 40px;
-    left: 56px;
+    left: 27px;
 
     @include onTablet {
-    }
-
-    @include onDesktop {
+      top: 40px;
+      left: 56px;
     }
   }
 }
