--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,7 +1,7 @@
 $tablet-min-width: 768px;
 $desktop-min-width: 1280px;
 $c-gray: #eee;
-$c-base-logo: #0F0E08;
+$c-title: #0F0E08;
 $ff-ibm: IBM Plex Sans;
 $ff-m: Montserrat;
 $fw-300: 300;
@@ -9,6 +9,10 @@ $fw-400: 400;
 $fw-500: 500;
 $fw-700: 700;
 $button-ticket-color: #1A5A4C;
+$acide-bcg: #1A5A4C;
+$acide-text-color: #FFF;
+$c-text-1: #687480;
+$c_text-2: #4E4E4E;
 
 
 
