--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,7 @@
-@import "utils";
-@import "fonts";
-@import "typography";
-
-body {
-  background: $c-gray;
-}
+@import "./utils/mixins";
+@import "./utils/variables";
+@import "./blocks/header";
+@import "./utils/reset";
+@import "./blocks/menu";
+@import "./blocks/section";
+@import "./blocks/footer";
