add hover img. adoptation aside menu

--- a/src/styles/block/page.scss
+++ b/src/styles/block/page.scss
@@ -16,20 +16,24 @@
     left: 0;
     right: 0;
     overflow: hidden;
-    background: linear-gradient(to bottom, $acide-bcg 66vh, rgba(24, 24, 26, 0.5) 66vh);
+    background: linear-gradient(to bottom, $acide-bcg 400px, rgba(24, 24, 26, 0.5) 9vh);
 
     opacity: 0;
     pointer-events: none;
-    display: flex;
 
     @include on-tablet {
       height: 225px;
+      width: 100%;
       padding: 0 35px;
-
+      display: flex;
+      height: 100vh;
+      background: linear-gradient(to bottom, $acide-bcg 225px, rgba(24, 24, 26, 0.5) 9vh);
     }
 
     @include on-desktop {
-      height: 233;
+      height: 233px;
+      height: 100vh;
+      background: linear-gradient(to bottom, $acide-bcg 233px, rgba(24, 24, 26, 0.5) 9vh);
     }
   }
 
