--- a/src/styles/block/aside.scss
+++ b/src/styles/block/aside.scss
@@ -1,5 +1,7 @@
 .menu {
   &__top {
+    width: 100vh;
+    height: min-content;
     @include on-tablet {
       width: min-content;
     }
@@ -17,6 +19,10 @@
       padding-bottom: 63px;
     }
 
+    @include on-desktop {
+      padding-bottom: 80px;
+    }
+
     .nav__list {
       list-style: none;
       margin: 0;
@@ -30,6 +36,10 @@
 
       @include on-tablet {
         margin-top: 40px;
+      }
+
+      @include on-desktop {
+        margin: 40px 102px 0 150px;
       }
     }
 
@@ -51,20 +61,55 @@
     font-family: $ff-ibm;
     font-size: 14px;
     font-weight: 400;
+    display: inline-block;
+    height: min-content;
+
+    @include on-tablet {
+      display: flex;
+    }
+
+    &-container {
+      @include on-tablet {
+        display: flex;
+        margin: 40px 38px;
+        flex-direction: column;
+        height: min-content;
+      }
+
+      @include on-desktop {
+        margin: 40px 30px 48px 102px;
+      }
+    }
 
     &__graf {
       line-height: 140.625%;
       display: block;
       margin: 24px 130px 20px 20px;
 
+      @include on-tablet {
+        margin: 0;
+        margin-bottom: 20px;
+      }
+
       &--day {
         line-height: 150%;
         margin: 0 20px;
+
+        @include on-tablet {
+          margin: 0;
+
+        }
       }
 
       &--freeday {
         line-height: 150%;
         margin: 16px 20px 27px 20px;
+
+        @include on-tablet {
+          margin: 80px 35px 40px 38px;
+          width: 144px;
+          height: 105px;
+        }
       }
     }
   }
