--- a/src/styles/block/events.scss
+++ b/src/styles/block/events.scss
@@ -38,6 +38,14 @@
   &__img {
     width: 100%;
     margin: 0;
+    -webkit-transition: all 1s ease;
+    transition: all 1s ease;
+
+    &:hover {
+      -webkit-transform: rotate(2deg);
+      transform: rotate(2deg);
+      cursor: pointer;
+    }
 
     @include on-desktop {
       grid-column: span 7;
