--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -1,3 +1,65 @@
-h1 {
-  @extend %h1;
+body {
+  font-family: $font-family-main;
+  font-size: 16px;
+  line-height: 24px;
 }
+
+
+p {
+  margin: 0;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+.title {
+  margin: 0;
+  font-family: $font-family-titles;
+  color: $color-main-title;
+
+  &--size-xl {
+    font-size: 45px;
+    line-height: 45px;
+    text-align: center;
+    color: #000;
+    text-transform: uppercase;
+
+    @include tablet-view {
+      text-align: left;
+      font-size: 54px;
+      line-height: 64px;
+    }
+
+    @include desktop-view {
+      font-size: 72px;
+      line-height: 86px;
+    }
+  }
+
+  &--size-l {
+    font-size: 36px;
+    line-height: 36px;
+    text-align: center;
+
+    @include tablet-view {
+      text-align: left;
+      font-size: 48px;
+      line-height: 48px;
+    }
+  }
+
+  &--size-m {
+    font-size: 28px;
+    line-height: 28px;
+    font-weight: 400;
+
+    @include tablet-view {
+      text-align: left;
+      font-size: 36px;
+      line-height: 36px;
+    }
+  }
+}
+
