--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,18 @@
-$c-gray: #eee;
+$font-family-main: 'IBM Plex Sans', sans-serif;
+$font-family-titles: 'Montserrat', sans-serif;
+$color-accent: #1A5A4C;
+$color-accent-secondary: #F14A27;
+$color-main-title: #0F0E08;
+$color-text-main: #4E4E4E;
+$color-text-secondary: #687480;
+$color-text-menu: #FFF;
+$color-border-menu: #FFFFFF80;
+$header-bg-image-height-mobile: 300px;
+$header-bg-image-height-tablet: 384px;
+$header-bg-image-height-desktop: 655px;
+$padding-inline-main-mobile: 20px;
+$padding-inline-main-tablet: 34px;
+$padding-inline-main-desktop: 55px;
+$btn-width: 70px;
+$btn-width-mobile: 50px;
+$gallery-scroll-distance: -296px;
