--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,29 @@
 @import "utils";
-@import "fonts";
 @import "typography";
+@import './blocks/icon';
+@import './blocks/page';
+@import './blocks/nav';
+@import './blocks/schedule';
+@import './blocks/carousel';
+@import './blocks/header';
+@import './blocks/menu';
+@import './blocks/events';
+@import './blocks/gallery';
+@import './blocks/subscribe';
+@import './blocks/footer';
 
-body {
-  background: $c-gray;
+
+* {
+  box-sizing: border-box;
+
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+img {
+  display: block;
 }
