--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,11 @@
 $c-gray: #eee;
+$bg: #3F5252;
+$grey-colour: #687480;
+$green-colour: #1a5a4c;
+$black-color: #0f0e08;
+$white-color: #e0e0e0;
+$dark: #000;
+$whitey: #fff;
+$bc-black: #18181a;
+$orange-color: #f14a27;
+$bg-btn: #ea340d;
