--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,12 @@
-@import "utils";
-@import "fonts";
-@import "typography";
-
-body {
-  background: $c-gray;
-}
+@import 'https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;600;700&display=swap';
+@import 'blocks/utils/vars';
+@import 'blocks/utils/mixins';
+@import 'blocks/page';
+@import 'blocks/header';
+@import 'blocks/top-bar';
+@import 'blocks/menu';
+@import 'blocks/main';
+@import 'blocks/announced';
+@import 'blocks/gallery';
+@import 'blocks/subscribe';
+@import 'blocks/footer';
