--- a/src/styles/blocks/_events.scss
+++ b/src/styles/blocks/_events.scss
@@ -21,16 +21,13 @@
     font-size: 16px;
     font-weight: 300;
     line-height: 150%;
+    margin-top: 15px;
   }
 
   &__case {
     display: flex;
     align-items: center;
     gap: 20px;
-  }
-
-  &__heading {
-    padding-bottom: 15px;
   }
 
   &--picture {
@@ -76,11 +73,20 @@
   }
 }
 
+@media (max-width: 600px) {
+  .events {
+
+    &__box {
+      grid-column: 1 / 6;
+    }
+  }
+}
+
 @media (max-width: 320px) {
   .events {
 
     &__case {
-      gap: 5px;
+      gap: 7px;
     }
 
     &__images {
@@ -95,10 +101,11 @@
 
     &__head {
       padding-bottom: 15px;
+      justify-content: space-between;
     }
 
-    &__heading {
-      padding-bottom: 11px;
+    &__value {
+      margin-top: 11px;
     }
 
     &--picture {
