--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -16,12 +16,10 @@
   }
 
   &__nav {
-    grid-column: 1/3;
-    margin-top: 40px;
-  }
-
-  &__labe {
-    grid-column: 7 / 9;
+    grid-column: 1/8;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     margin-top: 15px;
   }
 
@@ -125,13 +123,7 @@
     }
 
     &__nav {
-      grid-column: 1;
-      margin-top: 27px;
-    }
-
-    &__labe {
-      grid-column: 4;
-      margin-top: 9px;
+      grid-column: 1/5;
     }
 
     &__box {
@@ -158,18 +150,16 @@
     }
 
     &__nav {
-      grid-column: 1;
+      grid-column: 1/-1;
+      display: flex;
+      justify-content: start;
+      gap: 200px;
     }
 
     &__box {
       grid-column: 1 / -1;
       padding-top: 253px;
     }
-
-    &__labe {
-      grid-column: 4;
-    }
-
 
     &__title {
       text-align: center;
@@ -179,7 +169,6 @@
     &__button {
       margin-top: 20px;
       grid-column: 1 / -1;
-      width: 100%;
     }
   }
 }
@@ -188,14 +177,23 @@
 @media (max-width: 320px) {
   .header {
 
-    &__labe {
-      grid-column: 2;
+    &__nav {
+      margin-top: 9px;
+      grid-column: 1/-1;
+      display: flex;
+      gap: 88px
     }
 
     &__button {
       margin-top: 20px;
       grid-column: 1 / -1;
       width: 100%;
+      height: 50px;
+    }
+
+    &__btn {
+      height: 50px;
+      width: 50px;
     }
   }
 }
