--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -19,12 +19,8 @@ body {
   margin: 0 auto;
   padding: 0 55px;
 
-  @media (max-width: 1280px) {
-    max-width: 1170px;
-  }
-
   @media (max-width: 768px) {
-    max-width: 690px;
+    max-width: 100%;
     padding: 0 40px;
   }
 
@@ -79,6 +75,12 @@ body {
   background: #F14A27;
 
   @media (max-width: 768px) {
+    width: 10px;
+    height: 10px;
+  }
+
+  @media (max-width: 320px) {
+    margin-top: 5px;
     width: 10px;
     height: 10px;
   }
