--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,8 @@
 $c-gray: #eee;
+$mobile-max-width: 639px;
+$tablet-max-width: 1279px;
+$menu-background-color: #1A5A4C;
+$title-color: #0F0E08;
+$text-color: #4E4E4E;
+$menu-text-color: #FFF;
+$effect-duration: 0.5s;
