--- a/src/styles/blocks/_footer.scss
+++ b/src/styles/blocks/_footer.scss
@@ -77,7 +77,7 @@
     width: 1px;
     height: 260px;
     background: rgba(26, 90, 76, 0.50);
-    margin: auto auto;
+    margin: auto;
 
     @include on-tablet {
       grid-column: 2 / 6;
@@ -125,6 +125,6 @@
     color: $title-color;
     font-size: 12px;
     font-weight: 300;
-    line-height: 140.625%; /* 16.875px */
+    line-height: 140%;
   }
 }
