--- a/src/styles/blocks/_form.scss
+++ b/src/styles/blocks/_form.scss
@@ -30,7 +30,7 @@
 
     &::placeholder {
       color: #687480;
-      font-family: Montserrat;
+      font-family: Montserrat, sans-serif;
       font-size: 14px;
       font-weight: 400;
       line-height: 100%;
