--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -16,6 +16,7 @@
 
   &__title {
     margin-top: 119px;
+
     @include page-grid;
 
     @include on-tablet {
@@ -30,6 +31,7 @@
   &__tickets{
     margin-top: 89px;
     text-decoration: none;
+
     @include page-grid;
 
     @include on-tablet{
@@ -65,7 +67,7 @@
   &__link {
     text-decoration: none;
     color: #687480;
-    font-family: IBM Plex Sans;
+    font-family: "IBM Plex Sans", sans-serif;
     font-size: 14px;
     font-weight: 700;
     line-height: 100%;
