--- a/src/styles/blocks/_title.scss
+++ b/src/styles/blocks/_title.scss
@@ -1,6 +1,6 @@
 .title {
   color: $title-color;
-  font-family: Montserrat;
+  font-family: Montserrat, sans-serif;
   font-size: 48px;
   font-weight: 700;
   line-height: 100%;
@@ -11,7 +11,7 @@
   }
 
   &--main {
-    color: #000000;
+    color: #000;
     font-size: 72px;
     line-height: 120%;
 
