--- a/src/styles/blocks/_lections.scss
+++ b/src/styles/blocks/_lections.scss
@@ -25,7 +25,7 @@
     grid-column: 4 / 10;
     padding: 45px 100px 50px;
     margin-top: 450px;
-    box-shadow: 0px 2px 0px 0px rgba(26, 90, 76, 0.25);
+    box-shadow: 0 2px 0 0 rgba(26, 90, 76, 0.25);
 
     @include on-tablet{
       grid-column: 1 / -1;
@@ -34,7 +34,7 @@
     }
 
     @include on-mobile {
-      margin: 153px 0 0 0;
+      margin: 153px 0 0;
       padding: 24px 0 20px;
     }
   }
