--- a/src/styles/blocks/_logo.scss
+++ b/src/styles/blocks/_logo.scss
@@ -1,7 +1,7 @@
 .logo {
   color: $title-color;
   text-align: center;
-  font-family: Montserrat;
+  font-family: Montserrat, sans-serif;
   font-size: 36px;
   font-weight: 700;
   line-height: 100%;
