--- a/src/styles/blocks/_form.scss
+++ b/src/styles/blocks/_form.scss
@@ -50,6 +50,7 @@
     width: 72px;
     height: 72px;
     background-color: #F14A27;
+    cursor: pointer;
 
     @include hover(border-radius, 40%);
 
