--- a/src/styles/blocks/_contacts.scss
+++ b/src/styles/blocks/_contacts.scss
@@ -12,4 +12,14 @@
     font-weight: 400;
     line-height: 150%;
   }
+
+  &__link {
+    color: $title-color;
+    text-decoration: none;
+    font-size: 14px;
+
+    &:hover {
+      font-weight: 500;
+    }
+  }
 }
