--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -1,3 +1,193 @@
 h1 {
   @extend %h1;
 }
+
+h3 {
+  line-height: 100%;
+  font-size: 28px;
+
+  @include on-tablet {
+    font-size: 36px;
+  }
+}
+
+.title-section {
+  font-family: Montserrat, sans-serif;
+  font-size: 36px;
+  line-height: 100%;
+  text-align: center;
+  margin-bottom: 40px;
+
+  @include on-tablet {
+    font-size: 48px;
+    text-align: left;
+    margin-bottom: 48px;
+  }
+
+  @include on-desktop {
+    margin-bottom: 56px;
+  }
+}
+
+.header {
+  &__logo--text {
+    font-size: 30px;
+    line-height: 100%;
+
+    @include on-tablet {
+      font-size: 36px;
+    }
+  }
+
+  &__title {
+    font-size: 45px;
+    text-align: center;
+
+    @include on-tablet {
+      font-size: 54px;
+      line-height: 120%;
+      text-align: left;
+    }
+
+    @include on-desktop {
+      font-size: 72px;
+    }
+  }
+
+  &__bottom {
+    text-transform: uppercase;
+    &-events {
+      font-weight: 700;
+      line-height: 100%;
+      font-size: 14px;
+      color: #687480;
+    }
+
+  }
+}
+
+.schedule {
+  &__item {
+    font-size: 14px;
+    font-weight: 600;
+  }
+
+  &__text {
+    font-size: 14px;
+    font-weight: 400;
+  }
+}
+
+.day-off {
+  font-size: 14px;
+}
+
+.events {
+  &__title {
+    font-weight: 400;
+    color: $primary-color;
+    font-family: Montserrat, sans-serif;
+    font-size: 28px;
+
+    @include on-tablet {
+      font-size: 36px;
+    }
+  }
+}
+
+.events__info {
+
+  &-text {
+    @include style-events-text;
+  }
+
+  &-date {
+    font-weight: 700;
+    color: $dark-green;
+  }
+
+  &-description {
+    color: #4E4E4E;
+    font-weight: 300;
+  }
+}
+
+.additional-block {
+
+  &__top {
+    margin-bottom: 20px;
+
+    @include on-tablet {
+      margin-bottom: 16px;
+    }
+  }
+
+  &__bottom {
+    text-align: center;
+
+    @include on-tablet {
+      text-align: left;
+    }
+  }
+
+  &__text {
+    @include style-events-text;
+  }
+
+  &__date {
+    font-weight: 700;
+    color: $dark-green;
+  }
+}
+
+.subscribe {
+  &__title {
+    &-text {
+      text-align: center;
+      color: $white;
+    }
+
+  }
+
+  &__description {
+    &-text {
+      text-align: center;
+      color: $white;
+      font-size: 18px;
+    }
+  }
+}
+
+.footer {
+  color: $primary-color;
+
+  &__schedule {
+    font-size: 14px;
+
+    &-item {
+      font-weight: 600;
+    }
+
+    &-text {
+      font-weight: 400;
+    }
+
+    &-day-off {
+      font-size: 14px;
+
+      &-text {
+        @include on-desktop {
+          font-weight: 600;
+        }
+      }
+    }
+  }
+
+  &__nav {
+    &-item {
+      font-size: 14px;
+      line-height: 100%;
+    }
+  }
+
+}
