--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,4 +1,15 @@
 %h1 {
-  font-family: "Roboto", sans-serif;
-  font-weight: 400;
+  font-family: Montserrat, sans-serif;
+  font-weight: 700;
+  font-size: 45px;
+  text-align: center;
+  line-height: 100%;
+
+  @include on-tablet {
+    text-align: left;
+  }
+}
+
+.title {
+  line-height: 100%;
 }
