--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -74,8 +74,12 @@
   &__schedule-day-off {
     grid-column: 1;
 
+    @include on-tablet {
+      grid-column: 2 / 4;
+    }
+
     @include on-desktop {
-      grid-row: 2;
+      grid-column: 2;
       grid-column: 3 / 5;
     }
   }
@@ -91,7 +95,7 @@
     @include on-tablet {
       grid-row: 1;
 
-      grid-column: 4 / span 3;
+      grid-column: 4 / span 2;
     }
 
     @include on-desktop {
