--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -94,11 +94,23 @@
 
   .header__title {
     margin-bottom: 20px;
+
+    @include on-tablet {
+      max-width: 340px;
+    }
+
+    @include on-desktop {
+      max-width: 470px;
+    }
   }
 
   &__link {
     display: flex;
     height: 50px;
+
+    @include on-max-width-mobile {
+      justify-content: center;
+    }
 
     @include on-tablet {
       height: 70px;
