--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -7,14 +7,15 @@
   transition: all $effect-duration;
   transform: translateX(-100%);
   pointer-events: none;
-  overflow-y: hidden !important;
+  overflow: hidden !important;
+  z-index: 1000;
   color: #fff;
 
   &:target {
     opacity: 1;
     transform: translateX(0);
     pointer-events: all;
-    overflow-y: hidden !important;
+    overflow: hidden !important;
   }
 
   &__content {
