--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -53,6 +53,11 @@
     @include on-desktop {
       grid-column: 3 / span 8;
     }
+
+    &-email {
+      display: flex;
+    }
+
   }
 
   &__email {
@@ -83,6 +88,7 @@
   }
 
   &__arrow {
+    border: 1px solid $red;
     background-color: #F14A27;
 
     @include arrow;
