--- a/src/styles/blocks/additional.scss
+++ b/src/styles/blocks/additional.scss
@@ -3,6 +3,7 @@
 
   &__content {
     @include page-grid;
+
   }
 
   &-block {
@@ -19,7 +20,7 @@
     @include on-tablet {
       @include page-grid;
 
-      grid-column: 2 / span 4;
+      grid-column: span 6;
 
       padding: 45px 55px 50px;
       margin-top: -80px;
@@ -27,9 +28,9 @@
 
 
     @include on-desktop {
-      grid-column: 4 / span 7;
+      grid-column: 3 / 11;
 
-      padding: 45px 100px 50px;
+      padding: 45px 70px 50px;
     }
 
     &__top {
@@ -43,7 +44,7 @@
         --column: 4;
 
         grid-template-columns: (var(--column), 1fr);
-        grid-column: span 6;
+        grid-column: span 4;
         padding: 0;
       }
 
