--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -10,7 +10,7 @@
   }
 
   &__img {
-    height: 545px;
+    height: 545px !important;
     padding-right: 16px;
 
     @include on-max-width-mobile {
@@ -19,7 +19,8 @@
     }
 
     @include on-desktop {
-      height: 100%;
+      height: 100% !important;;
+      padding-right: 0;
 
       @include hover(transform, scale(1.05));
     }
@@ -32,6 +33,7 @@
       @include page-grid;
 
       row-gap: 30px;
+
     }
   }
 
@@ -56,7 +58,7 @@
   overflow: hidden;
 
   @include on-desktop {
-    display: none;
+    display: none !important;
   }
 }
 
@@ -90,3 +92,4 @@
 .slick-active>button {
   background: $dark-green;
 }
+
