--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -66,6 +66,14 @@ h3 {
   }
 }
 
+.nav {
+  &__item {
+    @include on-desktop {
+      font-size: 22px;
+    }
+  }
+}
+
 .schedule {
   &__item {
     font-size: 14px;
