--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -1,4 +1,5 @@
 .footer {
+  position: relative;
   padding-block: 50px;
 
   @include on-tablet {
@@ -31,6 +32,8 @@
     width: 60px;
     height: 72px;
     margin-bottom: 40px;
+
+    @include cursor;
 
     @include on-tablet {
       margin-bottom: 62px;
@@ -200,6 +203,25 @@
     @include on-desktop {
       grid-column: span 4;
     }
+  }
+
+  &__up-icon {
+    @include padding-inline;
+
+    position: absolute;
+    right: 0;
+    bottom: 27%;
+    padding-bottom: 30px;
+
+    @media (min-width:400px) {
+      bottom: 40%;
+      padding-bottom: 0;
+    }
+
+    @include on-desktop {
+      bottom: 20%;
+    }
+
   }
 }
 
