--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -41,6 +41,8 @@
     justify-self: center;
     grid-area: 1 / 1 / 1 / 3;
     padding-top: 10px;
+
+    @include cursor;
   }
 
   &__container {
@@ -71,7 +73,7 @@
       display: none;
       position: absolute;
       left: 0;
-      bottom: 35%;
+      top: 400px;
       transform: rotate(-90deg);
 
       &::before {
@@ -83,6 +85,8 @@
         left: -50px;
         bottom: -28px;
         transform: rotate(-90deg);
+
+        @include cursor;
       }
 
       @include on-desktop {
