--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -26,6 +26,8 @@
     left: 50%;
     transform: translate(-50%, -50%);
     transition-duration: $effect-duration;
+
+    @include cursor;
   }
 
   @include on-tablet {
@@ -55,7 +57,7 @@
   }
 }
 
-@mixin header-padding-inline {
+@mixin padding-inline {
   padding-inline: 20px;
 
   @include on-tablet {
@@ -103,4 +105,8 @@
   color: #687480;
   text-transform: uppercase;
   font-weight: 500;
+}
+
+@mixin cursor {
+  cursor: pointer;
 }
