--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -16,6 +16,7 @@
   &__img {
     margin-bottom: 16px;
 
+    @include cursor;
     @include hover(transform, scale(1.1));
 
     @include on-tablet {
