--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -79,7 +79,7 @@ h1 {
   display: flex;
   margin-left: -55px;
   margin-top: 15px;
-  width: 100%;
+  width: 90%;
   height: 72px;
   color: #0F0E08;
   text-align: center;
@@ -861,10 +861,11 @@ h1 {
   .footer_block4 {
     margin-top: 129px;
     margin-left: 168px;
+    width: 200px;
   }
   .footer_block5 {
     margin-top: 129px;
-    margin-left: 20px;
+    margin-left: 0px;
   }
   .footer_contacts {
     width: 220px;
@@ -904,7 +905,7 @@ h1 {
     display: none;
   }
   .main_gallery-img1, .main_gallery-img2 {
-    width: 320px;
+    width: 85%;
     height: 543px;
     -ms-flex-negative: 0;
         flex-shrink: 0;
@@ -1044,6 +1045,119 @@ h1 {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+  }
+  .footer {
+    position: relative;
+    height: 931px;
+  }
+  .footer_social-img {
+    margin-top: 0px;
+    margin-right: 20px;
+  }
+  .footer_block1 {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .footer-logo {
+    margin-left: 20px;
+  }
+  .footer_content {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .footer_block2 {
+    margin-left: 20px;
+    width: 130px;
+  }
+  .footer_worktime {
+    width: 130px;
+  }
+  .footer_block3 {
+    position: absolute;
+    top: 17.8%;
+    left: 60%;
+    margin: 0;
+    width: 128px;
+  }
+  .footer-line {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    position: absolute;
+    background: #1a5a4c80;
+    width: 90%;
+    height: 1px;
+    margin-top: 47px;
+    margin-left: 20px;
+    top: 65%;
+  }
+  .footer_block4 {
+    position: absolute;
+    bottom: 20%;
+    left: 20px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin-top: 0px;
+    margin-left: 0px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .footer_block5 {
+    position: absolute;
+    margin-top: 0px;
+    margin-left: 0px;
+    bottom: 20%;
+    left: 60%;
+  }
+  .footer_copyrights {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    position: absolute;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    bottom: 5%;
+    left: 20%;
+    margin: auto;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    color: #0f0e08;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+    /* margin-top: 87px; */
+    font-family: IBM Plex Sans;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: 140.625%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .main_event1-image {
+    width: 95%;
   }
 }
 /*# sourceMappingURL=main.css.map */
