--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -57,7 +57,7 @@ margin-left: 55px;
 display:flex;
 margin-left: -55px;
 margin-top: 15px;
-width: 100%;
+width: 90%;
 height: 72px;
 color: #0F0E08;
 text-align: center;
@@ -752,7 +752,7 @@ left: 41.3%
 
   .main_gallery-img1, .main_gallery-img2{
     width: 85%;
-height: 543px;
+
 flex-shrink: 0;
 margin-bottom: 32px;
 image-rendering: pixelated; /* Prevent image blurring */
@@ -782,9 +782,6 @@ image-rendering: pixelated; /* Prevent image blurring */
     margin-right: 0px;
   }
 
-  .footer_subscribe-wrapper {
-    width: 80%;
-  }
 
   .main_gallery-dots{
     margin-bottom: 100px;
@@ -974,5 +971,9 @@ height: 931px;
   font-weight: 300;
   line-height: 140.625%;
   display: flex;
+}
+
+.main_event1-image {
+  width: 95%;
 }
 }
