--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -906,7 +906,7 @@ h1 {
   }
   .main_gallery-img1, .main_gallery-img2 {
     width: 85%;
-    height: 543px;
+    height: 392px;
     -ms-flex-negative: 0;
         flex-shrink: 0;
     margin-bottom: 32px;
@@ -942,14 +942,17 @@ h1 {
     width: 60%;
     margin-right: 0px;
   }
-  .footer_subscribe-wrapper {
-    width: 80%;
-  }
   .main_gallery-dots {
     margin-bottom: 100px;
   }
   .main_gallery-img2 {
     margin-bottom: 20px;
+    height: 392px;
+    width: 75%;
+    margin-left: 16px;
+  }
+  .main_gallery-img1 {
+    margin-right: 0px;
   }
   .main_class-name {
     color: #0F0E08;
@@ -1158,6 +1161,12 @@ h1 {
   }
   .main_event1-image {
     width: 95%;
+  }
+  .section2_div {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    overflow: hidden;
   }
 }
 /*# sourceMappingURL=main.css.map */
