--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -752,7 +752,7 @@ left: 41.3%
 
   .main_gallery-img1, .main_gallery-img2{
     width: 85%;
-
+    height: 392px;
 flex-shrink: 0;
 margin-bottom: 32px;
 image-rendering: pixelated; /* Prevent image blurring */
@@ -788,7 +788,14 @@ image-rendering: pixelated; /* Prevent image blurring */
   }
 
   .main_gallery-img2 {
-    margin-bottom: 20px;;
+    margin-bottom: 20px;
+    height: 392px;
+    width: 75%;
+    margin-left: 16px;
+  }
+
+  .main_gallery-img1{
+    margin-right: 0px
   }
 
   .main_class-name{
@@ -975,5 +982,10 @@ height: 931px;
 
 .main_event1-image {
   width: 95%;
+}
+
+.section2_div{
+  display: flex;
+  overflow: hidden;
 }
 }
