--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -900,22 +900,18 @@ h1 {
   }
   .header_second-name {
     margin-left: -132px;
+    right: 45%;
+    width: auto;
   }
   .main_gallery-img3, .main_gallery-img4 {
     display: none;
   }
   .main_gallery-img1, .main_gallery-img2 {
     width: 85%;
-    height: 392px;
+    height: 410px;
     -ms-flex-negative: 0;
         flex-shrink: 0;
     margin-bottom: 32px;
-    -ms-interpolation-mode: nearest-neighbor;
-        image-rendering: -webkit-optimize-contrast;
-        image-rendering: -moz-crisp-edges;
-        image-rendering: -o-pixelated;
-        image-rendering: pixelated;
-    /* Prevent image blurring */
   }
   .main_dots_holder {
     display: -webkit-box;
@@ -947,12 +943,13 @@ h1 {
   }
   .main_gallery-img2 {
     margin-bottom: 20px;
-    height: 392px;
+    height: 410px;
     width: 75%;
     margin-left: 16px;
   }
   .main_gallery-img1 {
     margin-right: 0px;
+    height: 410px;
   }
   .main_class-name {
     color: #0F0E08;
