--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -744,6 +744,8 @@ left: 41.3%
 
   .header_second-name {
     margin-left: -132px;
+    right: 45%;
+    width: auto;
   }
 
   .main_gallery-img3, .main_gallery-img4{
@@ -752,10 +754,9 @@ left: 41.3%
 
   .main_gallery-img1, .main_gallery-img2{
     width: 85%;
-    height: 392px;
+    height: 410px;
 flex-shrink: 0;
 margin-bottom: 32px;
-image-rendering: pixelated; /* Prevent image blurring */
   }
 
   .main_dots_holder{
@@ -789,13 +790,14 @@ image-rendering: pixelated; /* Prevent image blurring */
 
   .main_gallery-img2 {
     margin-bottom: 20px;
-    height: 392px;
+    height: 410px;
     width: 75%;
     margin-left: 16px;
   }
 
   .main_gallery-img1{
-    margin-right: 0px
+    margin-right: 0px;
+    height: 410px;
   }
 
   .main_class-name{
