--- a/src/styles/blocks/_gallery.scss
+++ b/src/styles/blocks/_gallery.scss
@@ -32,4 +32,67 @@
       display: flex;
     }
   }
+
+  // .swiper {
+  //   width: 600px;
+  //   height: 300px;
+
+  //   @include onTablet {
+  //     display: none;
+  //   }
+  // }
+
+  .swiper {
+    width: 100%;
+    height: 100%;
+    position: relative;
+
+    @include onDesktop {
+      display: none;
+    }
+  }
+
+  .swiper-wrapper {
+    gap: 15px;
+  }
+
+  .swiper-slide {
+    // text-align: center;
+    // font-size: 18px;
+    background: #fff;
+    display: flex;
+    width: fit-content;
+    // justify-content: center;
+    // align-items: center;
+  }
+
+  .swiper-slide img {
+    display: block;
+    // width: 100%;
+    height: 410px;
+    object-fit: cover;
+  }
+
+  // .swiper-pagination {
+  //   position: absolute;
+  //   bottom: 10px;
+  //   width: 100%;
+  //   height: 10px;
+  //   text-align: center;
+  //   // background-color: #678;
+  // }
+
+  // .swiper-pagination .swiper-pagination-bullet-active {
+  //   background-color: red;
+  // }
+
+  // .swiper-pagination .swiper-pagination-bullet {
+  //   background-color: blue;
+  //   opacity: 0.5;
+  // }
+
+  // .swiper {
+  //   margin-left: auto;
+  //   margin-right: auto;
+  // }
 }
